# IOT-LoRaWAN-receive

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsOLD.txt  CMakeListsPrivate.txt  Dockerfile  IOT.atsln  IOT.componentinfo.xml  IOT.cproj  README.md  main.c  platformio.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  compile_code.yml  docker-img-builder.yml  dockerimage.yml
include/: co2.h  humidity.h  humidity_and_temperature.h  mult.h  servo.h  temperature.h
src/: co2.c  humidity.c  humidity_and_temperature.c  loraWanHandler.c  main.c  mult.c  servo.c  temhum.c  temperature.c
test/: CMakeLists.txt  co2_test.cpp  co2test.cpp  hum_and_temp_test.cpp  servo_test.cpp  test_app.cppexample  test_production.cpp
